# robot-task-board

./: .cursorrules  .dockerignore  .gitignore  API_GUIDE.md  Cargo.toml  Dockerfile  FIX_MANUAL.md  README.md  actual-log.txt  add_db_tests.py  add_impl.py  add_impl_audit.py  clippy.toml  current-log-normalized.txt  current-log.txt  evaluate_logs.py  expanded.rs  expected-log.txt  fix.rs  fix_test.py  get_counts.rs  hierarchical_logging_design.md  modify_resolve.py  patch  patch.rs  patch_service.py  patch_service.sh  plan.txt  rewrite_test.py  sample-log.txt  scratch  scratch.rs  scratch2.rs  test_facet.rs  tests_append.py
examples/: dirty_test.rs
generate-lib/: AGENTS.md  Cargo.toml  error.txt
generate-lib-java/: AGENTS.md
generate-lib-java/lib/: pom.xml
generate-lib-java/lib/src/main/java/com/doublechaintech/robotkanbanservice/: Checkers.java  EntityMetaRegistry.java  Q.java
generate-lib-java/lib/src/main/java/com/doublechaintech/robotkanbanservice/platform/: Platform.java  PlatformRequest.java
generate-lib-java/lib/src/main/java/com/doublechaintech/robotkanbanservice/task/: TaskExpression.java  TaskRequest.java
generate-lib-java/lib/src/main/java/com/doublechaintech/robotkanbanservice/taskexecutionlog/: TaskExecutionLog.java  TaskExecutionLogQuery.java  TaskExecutionLogRequest.java
generate-lib/.teaql/: evaluation_report.json
generate-lib/lib/: AGENTS.md  API_GUIDE.md  Cargo.toml  TOOL_API.md
generate-lib/lib/lib/: Cargo.toml
generate-lib/lib/lib/src/: e.rs  lib.rs  runtime.rs  sample_data.rs
generate-lib/lib/lib/src/platform/: entity.rs  expression.rs
generate-lib/lib/lib/src/task/: behavior.rs  entity.rs  expression.rs  request.rs
generate-lib/lib/lib/src/task_execution_log/: checker.rs  entity.rs  expression.rs  request.rs
generate-lib/lib/lib/src/task_status/: behavior.rs  entity.rs  request.rs
generate-lib/lib/src/: demo_data.rs  e.rs  lib.rs  q.rs  request_support.rs  runtime.rs  sample_data.rs
generate-lib/lib/src/attribute/: entity.rs  request.rs
generate-lib/lib/src/entities/: data_service.rs  mod.rs  platform.rs  task.rs  task_execution_log.rs  task_status.rs
generate-lib/lib/src/main/java/com/doublechaintech/robotkanbanservice/: GraphqlQueryRegistry.java  RootQuery.java
generate-lib/lib/src/main/java/com/doublechaintech/robotkanbanservice/platform/: PlatformChecker.java  PlatformQuery.java
generate-lib/lib/src/main/java/com/doublechaintech/robotkanbanservice/task/: TaskListExpression.java  TaskRequest.java
generate-lib/lib/src/main/java/com/doublechaintech/robotkanbanservice/taskexecutionlog/: TaskExecutionLogChecker.java  TaskExecutionLogRequest.java
generate-lib/lib/src/main/java/com/doublechaintech/robotkanbanservice/taskstatus/: TaskStatusListExpression.java
generate-lib/lib/src/object/: behavior.rs  entity.rs  expression.rs  request.rs
generate-lib/lib/src/platform/: entity.rs  expression.rs  request.rs
generate-lib/lib/src/task/: checker.rs  entity.rs  expression.rs  request.rs
generate-lib/lib/src/task_execution_log/: entity.rs  expression.rs  request.rs
generate-lib/lib/src/task_status/: checker.rs  entity.rs  expression.rs  request.rs
generate-lib/lib/src/tenant/: behavior.rs  checker.rs  entity.rs  expression.rs  mod.rs  request.rs
generate-lib/src/: lib.rs  main.rs  q.rs  runtime.rs
generate-lib/src/entities/: platform.rs  task.rs  task_execution_log.rs  task_status.rs
java-workspace/: AGENTS.md  pom.xml  teaql-i18n.sample.json
java-workspace/docs/: teaql-java-crud-guide.md
java-workspace/src/main/java/com/doublechaintech/robotkanbanservice/: App.java  CustomUserContext.java  EnsureModelController.java  TestController.java
java-workspace/src/main/java/io/teaql/data/utils/: ResourceUtil.java
java_out/: AGENTS.md
java_out/lib/src/main/java/com/doublechaintech/robotkanbanservice/: BaseServiceConfiguration.java  Constants.java  EntityMetaRegistry.java  Repositories.java  RobotKanbanServiceUserContext.java  ServiceRequestConfiguration.java  V.java
manual_domain/: Cargo.toml
manual_domain/src/: lib.rs  q.rs  runtime.rs
manual_domain/src/entities/: platform.rs  task.rs  task_execution_log.rs  task_status.rs
models/: main.xml  model-nodata.xml  model.xml
rust_out/lib/: Cargo.toml  pom.xml
rust_out/lib/src/: request_support.rs  runtime.rs
rust_out/lib/src/main/java/com/doublechaintech/robotkanbanservice/: E.java
rust_out/lib/src/main/java/com/doublechaintech/robotkanbanservice/platform/: PlatformListExpression.java  PlatformRequest.java
rust_out/lib/src/main/java/com/doublechaintech/robotkanbanservice/sampledata/: SampleDataService.java
rust_out/lib/src/main/java/com/doublechaintech/robotkanbanservice/task/: Task.java  TaskQuery.java
rust_out/lib/src/main/java/com/doublechaintech/robotkanbanservice/taskexecutionlog/: TaskExecutionLogListExpression.java
rust_out/lib/src/main/java/com/doublechaintech/robotkanbanservice/taskstatus/: TaskStatusChecker.java  TaskStatusRequest.java
rust_out/lib/src/platform/: entity.rs  request.rs
rust_out/lib/src/task/: entity.rs  mod.rs  request.rs
rust_out/lib/src/task_execution_log/: entity.rs  request.rs
rust_out/lib/src/task_status/: entity.rs  expression.rs  mod.rs  request.rs
src/: app.rs  commands.rs  logging.rs  main.rs  model.rs  models.rs  service.rs  startup.rs  tui.rs  ui.rs  utils.rs  web_api.rs
test-lib/: API_GUIDE.md
test-lib/lib/: Cargo.toml
test-lib/lib/src/: e.rs  lib.rs  runtime.rs  sample_data.rs
test-lib/lib/src/platform/: entity.rs  expression.rs  request.rs
test-lib/lib/src/task/: entity.rs  request.rs
test-lib/lib/src/task_execution_log/: behavior.rs  entity.rs  request.rs
test-lib/lib/src/task_status/: entity.rs  expression.rs  request.rs
test-workspace/: AGENTS.md  Cargo.toml  README.md
test-workspace/src/: lib.rs
tests/: test_api_flow.py  test_e_panic.rs  test_graph_diff_engine.rs  test_load_state_issue.rs  test_mysql.rs  test_pg.rs  test_trace_scope_token.rs
web/: index.html  main.js  package-lock.json  package.json  style.css
web/src/: AdminPage.jsx  App.jsx  index.css
(+7 files in other folders)
