[package]
name = "robot-task-board"
version = "0.1.0"
edition = "2021"
default-run = "robot-task-board"

[dependencies]
crossterm = { version = "0.27", features = ["event-stream"] }
ratatui = "0.30"

chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# TeaQL runtime packages
teaql-core = "4.0.0"
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls", "chrono"] }
teaql-runtime = "4.0.0"
teaql-macros = "4.0.0"
teaql-sql = "4.0.0"
teaql-provider-mysql = { path = "../teaql-rs/teaql-provider-mysql" }
teaql-data-service = "4.0.0"

# Our generated TeaQL domain logic library
robot_kanban = { path = "./generate-lib/lib", package = "robot-kanban-service" }
teaql-provider-meilisearch = "4.0.0"
whoami = "2.1.2"
rand = "0.10.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[patch.crates-io]
teaql-core = { path = "../teaql-rs/teaql-core" }
teaql-macros = { path = "../teaql-rs/teaql-macros" }
teaql-runtime = { path = "../teaql-rs/teaql-runtime" }
teaql-sql = { path = "../teaql-rs/teaql-sql" }
teaql-data-service = { path = "../teaql-rs/teaql-data-service" }

teaql-provider-meilisearch = { path = "../teaql-rs/teaql-provider-meilisearch" }
