[package]
name = "robot-task-board"
version = "0.1.0"
edition = "2021"
default-run = "robot-task-board"

[dependencies]
crossterm = { version = "0.27", features = ["event-stream"] }
ratatui = "0.30"
rusqlite = { version = "0.32", features = ["bundled", "column_decltype"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# TeaQL runtime packages
teaql-core = "4.0.1"
teaql-runtime = "4.0.1"
teaql-macros = "4.0.1"
teaql-sql = "4.0.1"
teaql-provider-sqlite = "4.0.1"
teaql-data-service = "4.0.1"

# Our generated TeaQL domain logic library
robot_kanban = { path = "./generate-lib/lib", package = "robot-kanban-service" }
teaql-provider-meilisearch = "4.0.1"
whoami = "2.1.2"
rand = "0.10.1"
teaql-provider-postgres = { version = "4.0.1", path = "../teaql-rs/teaql-provider-postgres" }
teaql-provider-mysql = { version = "4.0.1", path = "../teaql-rs/teaql-provider-mysql" }
tokio-postgres = "0.7.17"
deadpool-postgres = "0.14.1"
mysql_async = "0.37.0"
axum = { version = "0.8.9", features = ["macros"] }
tower-http = { version = "0.6.11", features = ["cors", "fs"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[patch.crates-io]
teaql-core = { path = "../teaql-rs/teaql-core" }
teaql-macros = { path = "../teaql-rs/teaql-macros" }
teaql-runtime = { path = "../teaql-rs/teaql-runtime" }
teaql-sql = { path = "../teaql-rs/teaql-sql" }
teaql-data-service = { path = "../teaql-rs/teaql-data-service" }
teaql-provider-sqlite = { path = "../teaql-rs/teaql-provider-sqlite" }
teaql-provider-meilisearch = { path = "../teaql-rs/teaql-provider-meilisearch" }
teaql-provider-postgres = { path = "../teaql-rs/teaql-provider-postgres" }
teaql-provider-mysql = { path = "../teaql-rs/teaql-provider-mysql" }
