[package]
name = "robot-kanban-service"
version = "1.0.0"
edition = "2021"
description = "Generated TeaQL service crate for robot-kanban-service"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teaql-core = "3.2.4"
teaql-macros = "3.2.4"
teaql-runtime = "3.2.4"
teaql-sql = "3.2.4"
teaql-data-service = "3.2.4"
teaql-tool-core = "1.0.0"
teaql-provider-mysql = { path = "../../../teaql-rs/teaql-provider-mysql" }
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
teaql-provider-meilisearch = { path = "../../../teaql-rs/teaql-provider-meilisearch" }