[package]
name = "robot-kanban-service"
version = "1.0.0"
edition = "2021"
description = "Generated TeaQL service crate for robot-kanban-service"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teaql-core = "4.0.0"
teaql-macros = "4.0.0"
teaql-runtime = "4.0.0"
teaql-sql = "4.0.0"
teaql-data-service = "4.0.0"
rusqlite = { version = "0.32", features = ["bundled", "column_decltype"] }
teaql-tool-core = "1.0.0"
teaql-provider-sqlite = "4.0.0"
deadpool = "0.12"
tokio-util = "0.7"
deadpool-runtime = "0.1.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
teaql-provider-meilisearch = "4.0.0"
